# file-sharing-service

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
backend/: Cargo.toml
backend/migrations/: 20231003114101_init.up.sql
backend/src/: config.rs  error.rs  main.rs
backend/src/model/: error.rs  mod.rs  shared_file.rs
backend/src/utils/: error.rs  mod.rs
backend/src/web/api/: mod.rs  shared_file.rs
common/: Cargo.toml
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: app.rs  main.rs
frontend/src/pages/: home.rs  list.rs  manage.rs  mod.rs  obtain.rs
frontend/style/: main.css
