[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { version = "0.1.0", path = "../common" }
log = "0.4"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"

wasm-bindgen = { version = "0.2" }
web-sys = { version = "0.3", features = ["Navigator", "Window", "Clipboard"] }
console_log = { version = "1"}
console_error_panic_hook = { version = "0.1"}

leptos = { version = "0.5.1-beta", features = ["csr", "nightly"] }
leptos_meta = { version = "0.5.1-beta", features = ["csr", "nightly"] }
leptos_router = { version = "0.5.1-beta", features = ["csr", "nightly"] }

getrandom = { version = "0.2", features = ["js"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
reqwest = { version = "0.11.22", features = ["multipart"] }
